<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hp.jagrukaamadmi.SignUp"
    android:background="@color/colorPrimaryDark"
    android:padding="20dp"
    android:orientation="vertical"
    >


    <ImageView
        android:layout_width="158dp"
        android:layout_height="116dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="-20dp"
        android:src="@drawable/akash"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:transitionName="logo_image"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello Hero!! Ready to sign up!!"
        android:textColor="@color/colorAccent"
        android:textSize="30dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="129dp"
        android:transitionName="logo_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SignUp to save anyone life!!"
        android:textColor="@color/colorAccent"
        android:textSize="20dp"
        android:layout_marginTop="5dp"
        android:transitionName="logo_sign"/>




        <android.support.design.widget.TextInputLayout
            android:id="@+id/etfullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/Fullname"
            android:transitionName="logo_in">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fullname"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/Fullname"
                android:inputType="textEmailAddress"
                android:textColor="#fff"
                android:transitionName="login"/>
        </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/username"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        android:transitionName="login"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
      android:transitionName="login"
            android:textColor="#fff"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:hint="@string/Email"
        android:transitionName="login">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:textColor="#fff"
            android:transitionName="login"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:hint="@string/password"
        android:layout_marginTop="-2dp"
        android:transitionName="login">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#fff"
            android:transitionName="login"
           />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/etphoneno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
android:transitionName="login"
        android:hint="@string/MobileNo"
        android:layout_marginTop="-2dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/phoneno"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/MobileNo"
            android:inputType="textPassword"
            android:textColor="#fff"
            android:transitionName="login"/>
    </android.support.design.widget.TextInputLayout>


    <Button
        style="@android:style/Widget.Button.Toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#1569c7"
        android:outlineProvider="bounds"
        android:text="SignUp"
        android:textStyle="bold"
        android:typeface="serif"
        android:transitionName="butter"

        />

    <Button

        android:id="@+id/loginb"
        android:layout_width="200dp"
        android:layout_height="32dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="2dp"
        android:background="#0000"
        android:elevation="0dp"
        android:text="Already a user ? LogIN"

        android:transitionName="butter1"
        android:textColor="@color/colorAccent" />


</LinearLayout>
